--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <button><li> SERVICIOS</li></button>
             <button><li>CONTACTO</li></button>
             <button><li>GALERIA</li></button>
+            <button><li>cambio</li></button>
             </STRONG>
         </ul> <br>
 
