--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class=derecha>
-            <img src="img/destreza3.jpg"width="600px alt=">
+            <img src="img/destreza3r.png"width="600px alt=">
         </div>
     </div>
  </header>
